<resources>
    <string name="app_name">Zendoku</string>
    <string name="app_start">Start</string>
    <string name="app_back">Back</string>
    <string name="app_settings">Settings</string>
    <string name="app_records">Records</string>
    <string name="board_skip">Skip</string>
    <string name="board_verify">Verify</string>
    <string name="settings_diff">Difficulty</string>
    <string name="settings_skip">Skips</string>
    <string name="settings_bgm">BGM</string>
    <string name="settings_sfx">SFX</string>
    <string name="settings_dec">-</string>
    <string name="settings_inc">+</string>
    <string name="credits">
        \nBackgrounds (Unsplash):\n<br/>
        \"Balance\" by Bekir Dönmez\n<br/>
        \"Pebble Tower\" by Jeremy Thomas\n<br/>
        \"Peaceful Garden\" by Sarah Ball\n<br/>
        \"Pristine Water Lily\" by Jay Castor\n\n<br/><br/>
        Music:\n<br/>
        \"Game Theory\" by Masayoshi Soken\n\n<br/><br/>
        by Gregorio &amp; Megallon<br/>
        \n(MOBDEVE S17 - 2021)
    </string>
    <string name="dummy">Test</string>

    <dimen name="btn_width">140dp</dimen>
    <dimen name="btn_radius">20dp</dimen>
    <dimen name="btn_text_size_13">13dp</dimen>
    <dimen name="btn_text_size_15">15dp</dimen>
    <dimen name="btn_text_size_20">20dp</dimen>
</resources>